--- a/tienda/public/index.html
+++ b/tienda/public/index.html
@@ -28,6 +28,7 @@
   <link rel="stylesheet" href="<%= BASE_URL %>assets/css/regular.css">
   <link rel="stylesheet" href="<%= BASE_URL %>assets/css/brands.css">
   <link rel="stylesheet" href="<%= BASE_URL %>assets/css/fontawesome.css">
+  <link rel="stylesheet" href="<%= BASE_URL %>assets/css/nouislider.min.css">
 </head>
 
 <body>
@@ -55,6 +56,7 @@
   <script src="<%= BASE_URL %>assets/js/theme.d7b4a888.js"></script>
   <script src="<%= BASE_URL %>assets/js/jquery.cookie.js"> </script>
   <script src="<%= BASE_URL %>assets/js/demo.36f8799a.js"></script>
+  <script src="<%= BASE_URL %>assets/js/nouislider.min.js"></script>
 </body>
 
 </html>
